--- a/app/src/main/res/layout/quiz_detail_layout.xml
+++ b/app/src/main/res/layout/quiz_detail_layout.xml
@@ -10,7 +10,7 @@
         android:elevation="@dimen/fab_elevation"
         android:orientation="vertical"
         android:padding="15dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <TextView
             android:id="@+id/quiz_name"
@@ -18,13 +18,18 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:textSize="25sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@android:color/darker_gray"/>
+            android:background="@android:color/darker_gray" />
 
+        <LinearLayout
+            android:id="@+id/teams_placeholder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
 
 
     </LinearLayout>
@@ -54,7 +59,7 @@
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:contentInsetStart="72dp"
                 app:layout_collapseMode="pin"
-                app:navigationIcon="@drawable/logo" />
+                app:navigationIcon="@drawable/header_logo_image" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
