--- a/app/src/main/res/layout/activity_quiz_detail.xml
+++ b/app/src/main/res/layout/activity_quiz_detail.xml
@@ -1,7 +1,10 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@mipmap/background"
+    android:backgroundTint="@color/background_tint"
+    android:backgroundTintMode="src_over">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,15 +66,5 @@
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:elevation="@dimen/fab_elevation"
-        android:onClick="sendNewData"
-        app:srcCompat="@mipmap/ic_settings_white_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
