--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,10 +25,13 @@
         <!-- colorPrimaryDark is used for the status bar -->
         <item name="colorPrimaryDark">#4f1515</item>
 
+        <item name="android:textColor">#000</item>
+
         <!-- colorAccent is used as the default value for colorControlActivated,
          which is used to tint widgets -->
         <item name="colorAccent">@color/accent</item>
 
     </style>
+
 
 </resources>
