--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:background="@color/primary_text"
+            android:background="@color/black"
             app:tabIndicatorHeight="10dp"
             app:tabSelectedTextColor="@color/cardview_light_background"
             app:tabTextColor="@color/divider" />
