Added layout/activity for adding team.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,5 +42,7 @@
 
 
     <color name="black">#000</color>
+    <color name="button_background">#75000000</color>
+    <color name="button_text">#80FFFFFF</color>
 
 </resources>
