--- a/app/src/main/res/layout/activity_quiz_pending.xml
+++ b/app/src/main/res/layout/activity_quiz_pending.xml
@@ -33,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/background_tint"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -70,6 +71,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -77,8 +79,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:gravity="center_horizontal"
-                    android:paddingTop="10dp"
                     android:text="Stav teamov:"
                     android:textColor="@color/secondary_text"
                     android:textSize="14sp" />
@@ -91,6 +93,20 @@
                     android:text="...."
                     android:textColor="@color/secondary_text"
                     android:textSize="14sp" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/button_background"
+                    android:elevation="@dimen/button_elevation"
+                    android:onClick="signUpTeamClick"
+                    android:paddingEnd="10dp"
+                    android:paddingStart="10dp"
+                    android:text="Add team"
+                    android:textColor="@color/button_text"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
 
