--- a/app/src/main/res/layout/activity_quiz_pending.xml
+++ b/app/src/main/res/layout/activity_quiz_pending.xml
@@ -98,6 +98,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
+                    android:layout_marginTop="5dp"
                     android:background="@color/button_background"
                     android:elevation="@dimen/button_elevation"
                     android:onClick="signUpTeamClick"
@@ -116,20 +117,26 @@
             android:background="@android:color/darker_gray"
             android:padding="5dp" />
 
-        <TextView
-            android:id="@+id/scoreboard_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:text="Zoznam teamov:"
-            android:textSize="14sp" />
-
         <LinearLayout
-            android:id="@+id/teams_placeholder"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="15dp">
 
+            <TextView
+                android:id="@+id/scoreboard_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:text="Zoznam teamov:"
+                android:textSize="14sp" />
+
+            <LinearLayout
+                android:id="@+id/teams_placeholder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+        </LinearLayout>
     </LinearLayout>
 
     <android.support.design.widget.AppBarLayout
