--- a/app/src/main/res/layout/activity_quiz_pending.xml
+++ b/app/src/main/res/layout/activity_quiz_pending.xml
@@ -18,13 +18,35 @@
             android:orientation="vertical"
             android:padding="15dp">
 
-            <TextView
-                android:id="@+id/quiz_name"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:textSize="25sp"
-                android:textStyle="bold" />
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingBottom="5dp">
+
+                <TextView
+                    android:id="@+id/quiz_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:gravity="center_horizontal"
+                    android:text="name"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_weight="10"
+                    android:background="@color/button_background"
+                    android:elevation="@dimen/button_elevation"
+                    android:onClick="moveToDone"
+                    android:text="CHECK" />
+
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
