Team list dynamic. SignUpTeamActivity is now ineer class of PendingQuizDetailActivity.

--- a/app/src/main/res/layout/activity_quiz_pending.xml
+++ b/app/src/main/res/layout/activity_quiz_pending.xml
@@ -120,6 +120,7 @@
                         android:textSize="14sp" />
 
                     <Button
+                        android:id="@+id/sign_up_team"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
