--- a/app/src/main/res/layout/activity_add_quiz.xml
+++ b/app/src/main/res/layout/activity_add_quiz.xml
@@ -177,7 +177,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/toolbar_container"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/toolbar_max_height">
+        android:layout_height="72dp">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_"
