--- a/app/src/main/res/layout/activity_quiz_pending.xml
+++ b/app/src/main/res/layout/activity_quiz_pending.xml
@@ -30,6 +30,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="5"
+                    android:elevation="@dimen/button_elevation"
                     android:gravity="center_horizontal"
                     android:text="name"
                     android:textSize="25sp"
@@ -44,7 +45,9 @@
                     android:background="@color/button_background"
                     android:elevation="@dimen/button_elevation"
                     android:onClick="moveToDone"
-                    android:text="CHECK" />
+                    android:text="CHECK"
+                    android:textColor="@color/button_text"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
