Added scrollable image to toolbar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,14 @@
             app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+            <ImageView
+                android:id="@+id/photo_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="false"
+                android:background="@mipmap/toolbar_background"
+                android:scaleType="fitXY"
+                android:src="@drawable/photo_background_protection" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
