--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:background="@color/button_background"
+                android:background="@drawable/toolbar_gradient"
                 app:tabIndicatorHeight="10dp"
                 app:tabSelectedTextColor="@color/cardview_light_background"
                 app:tabTextColor="@color/divider" />
