--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,7 +23,7 @@
         <item name="colorPrimary">#4f1515</item>
 
         <!-- colorPrimaryDark is used for the status bar -->
-        <item name="colorPrimaryDark">#4f1515</item>
+        <item name="colorPrimaryDark">#000</item>
 
         <item name="android:textColor">#000</item>
 
