Added confirm dialog

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,5 +33,10 @@
 
     </style>
 
+    <style name="myDialog" parent="MyStyle">
+        <item name="android:windowNoTitle">true</item>
+        ...
+    </style>
+
 
 </resources>
